--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -9,14 +9,18 @@
     <item
         android:id="@+id/menu_bottom_nav_item_1"
         android:title="@string/bottomnav_menu_title_item_1"
-        android:icon="@drawable/ic_favorite_black_24dp" />
+        android:icon="@drawable/ic_music_note_black_24dp" />
     <item
         android:id="@+id/menu_bottom_nav_item_2"
         android:title="@string/bottomnav_menu_title_item_2"
-        android:icon="@drawable/ic_notifications_black_24dp"/>
+        android:icon="@drawable/ic_favorite_black_24dp" />
     <item
         android:id="@+id/menu_bottom_nav_item_3"
         android:title="@string/bottomnav_menu_title_item_3"
+        android:icon="@drawable/ic_notifications_black_24dp"/>
+    <item
+        android:id="@+id/menu_bottom_nav_item_4"
+        android:title="@string/bottomnav_menu_title_item_4"
         android:icon="@drawable/ic_account_circle_black_24dp" />
 </menu>
 
